--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -388,7 +388,6 @@ html, body {
   border-bottom-left-radius: 3px;
 }
 
-
 .panel-group {
   margin-bottom: 0rem;
 }
@@ -434,8 +433,8 @@ panel-group .panel {
   border-bottom-color: #ddd;
 }
 
-/* ACCORDION */
-/* Style the buttons that are used to open and close the accordion panel */
+/* ACCORDION: for projects*/
+
 .accordion {
   background-color: #eee;
   color: #444;
@@ -448,8 +447,8 @@ panel-group .panel {
   transition: 0.4s;
 }
 
-/* Style the accordion panel. Note: hidden by default */
-.panel-research {
+/* accordian panel: hidden by default */ 
+.panel-project {
     padding: 0px;
     background-color: white;
     max-height: 0;
